2004-05-17  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs: workaround potential nullref.

2004-05-16  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs: Implement beta monodoc resolving.
	This works only with types for right now, so its now 100% of what
	you would expect.

2004-05-09  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs: bring current with gtk-sharp cvs.
	* Gui/OptionPanels/CodeTemplatePanel.cs: ^^

2004-04-30  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/CompletionWindow.cs: properly handle enter.

2004-04-29  Todd Berman  <tberman@sevenl.net>

	* Gui/OptionPanels/CodeTemplatePanel.cs: match gtk-sharp from cvs.

2004-04-28  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* Gui/SourceEditorDisplayBinding.cs: added a case for setting mime for
	new Nemerle files.

2004-04-27  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorDisplayBinding.cs: workaround some to reduce the
	amount of times the idle handler is called, and to reuse the delegate.

2004-04-27  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorBuffer.cs:
	* Gui/SourceEditorView.cs:
	* Gui/SourceEditorDisplayBinding.cs: update to match gsv-sharp from
	cvs.

2004-04-26  John Luke  <jluke@cfl.rr.com>

	* Gui/SourceEditorDisplayBinding.cs: add python mimetype to
	CanCreateContent, needs a more robust fix

2004-04-26  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorDisplayBinding.cs: Make goto matching brace work
	a bit better. now ctrl+b ctrl+b will bring you back to the same place.

2004-04-24  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/CompletionWindow.cs: make sure to properly handle
	people typing things other than whats in our window (that is legal
	too... (for now ;) )).

2004-04-24  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/CodeCompletionDataProvider.cs: hook into is/as resolve
	method.

2004-04-23  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorBuffer.cs: add a check for a 0 length iter.Char