@@ -1,3 +1,7 @@
+2004-05-20  Todd Berman  <tberman@sevenl.net>
+
+	* Gui/SourceEditorBuffer.cs: update to gtk-sharp from cvs.
+
 2004-05-17  Todd Berman  <tberman@sevenl.net>
 
 	* Gui/SourceEditorView.cs: workaround potential nullref.
